port-forwarding-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-forwarding-svc
spec:
  type: NodePort
  selector:
    app: port-forwarding
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
